<resources>
    <string name="app_name">TabHero</string>
    <string name="title_activity_main">TabHero</string>
    <string name="search">Search</string>
    <string name="favorites">Go to favorites</string>
    <string name="hint_title">Enter the name of the song</string>
    <string name="hint_author">Enter artist</string>
    <string name="online">Search on the Internet</string>
    <string name="chosen_performer">Selected artist</string>
    <string name="srchPerf">Artist searching&#8230;</string>
    <string name="srchSong">Song searching&#8230; </string>
    <string name="srchTab">Downloading tablature&#8230;</string>
    <string name="wait">Please wait&#8230;</string>
    <string name="hintEmpty">You have to enter the artist!</string>
    <string name="hintSpace">The first character must not be a space or dot.</string>
    <string name="connectionError">Internet connection problem</string>
    <string name="addToFav">Add to favorites</string>
    <string name="delFromFav">Remove from favorites</string>
    <string name="addToBaseSuccess">Successfully added to favorites</string>
    <string name="recordExist">This tablature already exists on your favorites</string>
    <string name="areYouSure">Are you sure you want to delete this item?</string>
    <string name="delFromBaseSuccess">Tablature was deleted</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="notDelFromBase">Tablature wasn\'t deleted</string>
    <string name="delPerfFromBase">Artists were removed successfully</string>
    <string name="edit">Edit list</string>
    <string name="deleteFavPerfs">Remove from favorites</string>
    <string name="delTitleFromBase">Songs have been removed successfully</string>
    <string name="errorInInternetConnection">Internet connection problem</string>
    <string name="openWebBrowser">Search for lyrics</string>
    <string name="info">Info</string>
    <string name="ok">OK</string>
    <string name="message_info">Author: Wacław Szabłowski\nszablowski.waclaw@gmail.com</string>
    <string name="help">Help</string>
    <string name="reverse_selection">Reverse selection</string>
    <string name="notDelFromPerfsBase">Artists weren\'t deleted</string>
    <string name="notDelFromTitlesBase">Tablatures weren\'t deleted</string>
    <string name="minmax">Toggle bar</string>
    <string name="wifiOn">WiFi on</string>
    <string name="wifiOff">WiFi off</string>
    <string name="wifiTrueError">Activating WiFi error</string>
    <string name="wifiFalseError">Deactivating WiFi error</string>
    <string name="editTab">Edit tablature</string>
    <string name="createDirectoryError">Unable to create directory </string>
    <string name="sdcardMountError">Perhaps the SD card is not mounted?</string>
    <string name="sdcardWriteError"> Unable to write to external storage.</string>
    <string name="sdcardReadError">Unable to read external storage</string>
    <string name="configReadError">Unable to read config file</string>
    <string name="configWriteError">Unable to write config file</string>
    <string name="sdcardWriteOK">Tablature successfully saved to: </string>
    <string name="changePerf">Change name of the performer</string>
    <string name="cancel">Cancel</string>
    <string name="changeTitle">Change title of this song</string>
    <string name="addOwnRecord">Add your own tablature</string>
    <string name="tabExist">This tablature was added to favorites, but its title or artist was edited. Do you still want to add it to favorites?</string>
    <string name="notAddTab">Tablature not added to favorites</string>
    <string name="lockOn">Screen orientation locked</string>
    <string name="lockOff">Screen orientation unlocked</string>
    <string name="wifiTryOn">Starting WiFi&#8230;</string>
    <string name="wifiTryOff">Turning off WiFi&#8230;</string>
    <string name="addOwnPerf">Add your own performer</string>
    <string name="addOwnTitle">Add a song title for this performer</string>
    <string name="websiteConnectionError">Website connection error</string>
    <string name="choosePerf">You have to choose or type in performer to continue</string>
    <string name="chooseTitle">You have to choose or type in title to continue</string>
    <string name="tablatureUpdateError">Failed to update tablature</string>
    <string name="minmaxError">Toggle status bar problem</string>
    <string name="configReadWriteError">Unknown input/output error on SDCard while writing to config file</string>
    <string name="unknownConnectionError">Website connection error</string>
    <string name="createDatabaseError">Error creating database</string>
    <string name="sleepTaskError">Error while trying to task sleep</string>
    <string name="versionReadError">Info read error</string>
    <string name="firstRun">Thanks for downloading this app. Click Help to view summary of this program\'s functions.</string>
    <string name="hello">Welcome!</string>
    <string name="mobileData">Mobile data transfer on</string>
    <string name="mobileDataCheckError">Mobile data transfer connection problem</string>
    <string name="favoritesEmpty">There are no tablatures in favorites</string>
    <string name="noRecordsFound">No records matching \"%s\" found</string>
    <string name="dontShowAgain">Don\'t show again</string>
    <string name="hint">Hint</string>
    <string name="infoAboutHintEmpty">Press magnifier icon with empty textbox to find this performer\'s all available songs</string>
    <string name="menuRecentlyShown">Last viewed</string>
    <string name="lastShown">Recently shown</string>
    <string name="fav">Favorites</string>
    <string name="net">Internet</string>
    <string name="parseDateError">Parse date error</string>
    <string name="lastTenEmpty">The list of recently shown tablatures is empty</string>
    <string name="dateString">Date:</string>
    <string name="typeString">Recently shown in:</string>
    <string name="chooseWallpaper">Select wallpaper</string>
    <string name="configNameFile">My_Preferences</string>
    <string name="isCheckedInConfig">isCheckedInConfig</string>
    <string name="isConfigMax">isConfigMax</string>
    <string name="configMIN">MIN</string>
    <string name="configMAX">MAX</string>
    <string name="configSize">configSize</string>
    <string name="googleUrl">http://www.google.com/search?q=</string>
    <string name="spaceUrl">%20</string>
    <string name="lyricsUrl">lyrics</string>
    <string name="chordsUrl">http://www.chords.pl</string>
    <string name="chordsWykonawcyUrl">http://www.chords.pl/wykonawcy/</string>
    <string name="androidDir">Android</string>
    <string name="dataDir">data</string>
    <string name="isNotChecked">isNotChecked</string>
    <string name="isChecked">isChecked</string>
    <string name="defaultSize">12</string>
    <string name="lastTenString">lastTenString</string>
    <string name="isFirstRun">isFirstRun</string>
    <string name="formatDate">yyyy-MM-dd HH:mm:ss</string>
    <string name="fastScrollError">Build fastscroll error</string>
    <string name="mainScreen">Main Screen</string>
    <string name="describeMain1">Menu button which shows short information and from which help can be displayed.</string>
    <string name="describeMain2">Menu button toggles status bar. Not available for tablet devices.</string>
    <string name="describeMain3">Go to tablature Internet search.</string>
    <string name="describeMain4">Go to tablature Favorites search.</string>
    <string name="describeMain5">- Instead of pressing buttons (3) and (4), you can go to the those sections by swiping screen to left or right.</string>
    <string name="describeMain6">Menu button which shows last ten viewed tablatures.\n
        - The list consists of the name of the performer, the song title and one of the two icons:\n
        * planet means, the tablature was shown via Internet;\n
        * star means, the tablature was shown in Favorites.\n
        - The tablature appears when you select one of the items from the list. You don\'t need an Internet connection.</string>
    <string name="describeMain7">- Long click on the robot in the middle of the screen will pop up the window to change the home screen wallpaper.</string>
    <string name="searchScreen">Search via Internet</string>
    <string name="describeSearch1">\”Home\” button.</string>
    <string name="describeSearch2">Pressing this button turns WiFi off. Shown when WiFi is on.</string>
    <string name="describeSearch3">Shown when mobile data transfer is on.\n
        - If you can\'t see this button, it means mobile data is off or wifi is enabled (2).\n
        - Pressing button turns off mobile data.</string>
    <string name="describeSearch4">Pressing this button turns WiFi on. Shown when WiFi is off.\n
        - In addition, if mobile data is on (3), then you can press this button to turn off mobile data transfer.</string>
    <string name="describeSearch5">Search for performers or songs on any search screen.\n
        - Search for input string in available names of performers/songs.</string>
    <string name="describeSearch6">Type performer or song name here.\n
        - If you don\'t type in any character and start searching, you\'ll get all the possibilities.*\n
        * Internet performer search is an exception. First typed character is a first letter of searched performer.</string>
    <string name="describeSearch7">List of performers/songs found. Select one to see details.</string>
    <string name="describeSearch8">You can go back to previous screen by pressing \"back\" button on your device or swiping back the screen.</string>
    <string name="tabScreen">Tablature view</string>
    <string name="describeTab1">Add displayed tablature to favorites.\n
        - If this tablature already exists in favorites or the name of this performer/song in favorites has changed, an appropriate message will be displayed.</string>
    <string name="describeTab2">Search for lyrics of this song in web browser.</string>
    <string name="describeTab3">Remove currently displayed tablature from favorites.</string>
    <string name="describeTab4">Save currently displayed tablature as file on internal memory. It allows to edit this tablature.\n
        - After editing previously saved tablature, your tablature in favorites is replaced with a new one (with your changes) and the file is automatically deleted from memory.\n
        - Path: /sdcard/Android/pl.tabhero/performer_name-song_name.tablature_id.txt\n
        - To update tablature from file make sure not to change the name of this file.</string>
    <string name="describeTab5">Static bar with the performer and the song names.\n
        - If you touch this bar, at the bottom of the screen plus and minus buttons (6) will appear.</string>
    <string name="describeTab6">Slightly scales tablature font down or up.</string>
    <string name="describeTab7">Current tablature.\n
        - You can scale tablature size up or down by pinch gesture.\n
        - Long press to show orientation lock/unlock button (8).</string>
    <string name="describeTab8">Press to lock or unlock orientation of the screen.</string>
    <string name="describeTab9">Auto-sleep is disabled on tablature screen.</string>
    <string name="imageDescMainScreen">Description of the main screen</string>
    <string name="imageDescTabScreen">Description of the tablature screen</string>
    <string name="imageDescSearchScreen">Description of the search screen</string>
    <string name="imageDesc1">1</string>
    <string name="imageDesc2">2</string>
    <string name="imageDesc3">3</string>
    <string name="imageDesc4">4</string>
    <string name="imageDesc5">5</string>
    <string name="imageDesc6">6</string>
    <string name="imageDesc7">7</string>
    <string name="imageDesc8">8</string>
</resources>