<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
  	android:padding="10dp" >
  	<TextView 
  	    android:id="@+id/textHint"
  	    android:text="@string/infoAboutHintEmpty"
  	    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:textSize="18sp"/>

    <CheckBox
        android:id="@+id/skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textHint"
        android:layout_alignRight="@+id/textHint"
        android:layout_below="@id/textHint"
        android:text="@string/dontShowAgain"
        android:textSize="13sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/skip"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/skip"
        android:orientation="horizontal"
        android:paddingBottom="1.0dip"
        android:paddingLeft="4.0dip"
        android:paddingRight="4.0dip"
        android:paddingTop="5.0dip" >

        <Button
            android:id="@+id/okButton"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:text="@string/ok" />
    </LinearLayout>

</RelativeLayout>
